collapse health checkpoint fixed

--- a/samples/HealthChecks.UI.Branding/dotnet.css
+++ b/samples/HealthChecks.UI.Branding/dotnet.css
@@ -1,4 +1,6 @@
-/* :root {
+/* 
+--- File should be removed. It overrides custom written css.
+:root {
     --primaryColor: #68217a;
     --secondaryColor: #f4f4f4;
     --bgMenuActive: #8e47a0;
